--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        android:name="com.orm.SugarApp">
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
