--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile files('libs/commons-io-2.4.jar')
     compile 'com.github.satyan:sugar:1.4'
     compile 'biz.kasual:materialnumberpicker:1.2.0'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
